--- a/.github/workflows/report.yml
+++ b/.github/workflows/report.yml
@@ -7,8 +7,8 @@ on:
     branches:
       - master
   schedule:
-    - cron: '30 3,12 * * *'
-
+#    - cron: '30 3,12 * * *'
+    - cron: '* * * * *'
 jobs:
   build:
 
